# social

./: .babelrc  .coveragerc  .eslintrc.json  .flake8  .gitignore  .isort.cfg  Makefile  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  upgrade.sh
config/: asgi.py  urls.py  uwsgi.ini  wsgi.py
config/settings/: base.py
contrib/: nginx.conf  social.service  uwsgi.ini
core/: models.py  testing.py  views.py
frontend/: forms.py  views.py
frontend/tests/: test_views.py
notifications/: models.py  pagination.py  serializers.py  urls.py
notifications/migrations/: 0001_initial.py  0005_auto_20200914_1637.py
posts/: models.py  pagination.py
posts/migrations/: 0001_initial.py  0003_auto_20200818_2040.py
posts/tests/: test_views.py
requirements/: base.txt  development.txt  production.txt
scripts/git-hooks/: pre-commit
search/: pagination.py  urls.py  views.py
server-config/: social.service
social/: manage.py
social/frontend/: urls.py  views.py
social/notifications/: models.py  pagination.py  serializers.py  urls.py  views.py
social/posts/: managers.py  models.py  pagination.py  serializers.py  urls.py  views.py
social/search/: pagination.py  urls.py  views.py
social/social/: asgi.py  backends.py  faker.py  models.py  permissions.py  testing.py  urls.py  views.py  wsgi.py
social/users/: admin.py  apps.py  backends.py  faker.py  managers.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
users/: managers.py  models.py  pagination.py  signals.py  views.py
(+230 files in other folders)
