[tool.black]
line-length = 88
exclude = 'migrations'

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_django = 'django'
known_rest_framework = 'rest_framework'
known_first_party = 'notifications,posts,search,social,users'
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
profile = 'black'
sections = 'FUTURE,STDLIB,THIRDPARTY,REST_FRAMEWORK,DJANGO,FIRSTPARTY,LOCALFOLDER'
skip_gitignore = true

[tool.poetry]
name = "social"
version = "0.1.0"
description = ""
authors = ["Daniel Lindegren <onosendi@dlindegren.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.8"
django-extensions = "3.1.0"
django-debug-toolbar = "3.2.1"
djangorestframework = "3.11.2"
Faker = "5.8.0"
mixer = "7.1.2"
Pillow = "7.2.0"
psycopg2-binary = "2.8.6"
python-dotenv = "0.14.0"
simplejson = "3.17.2"
uWSGI = "2.0.19.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
ipython = "^7.27.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
